@@ -99,13 +99,13 @@ public class MessageListener extends ListenerAdapter {
         // TTPG-EXPORTS - Save attachment to ttpg_exports folder for later processing
         if ("ttpg-exports".equalsIgnoreCase(event.getChannel().getName())) {
             List<Message.Attachment> attachments = event.getMessage().getAttachments();
-            if (!attachments.isEmpty() && "json".equalsIgnoreCase(attachments.get(0).getFileExtension())) { // write to
+            if (!attachments.isEmpty() && "json".equalsIgnoreCase(attachments.getFirst().getFileExtension())) { // write to
                                                                                                             // file
                 String currentDateTime = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("uuuu-MM-dd-HHmmss"));
                 String fileName = "ttpgexport_" + currentDateTime + ".json";
                 String filePath = Storage.getTTPGExportDirectory() + "/" + fileName;
                 File file = new File(filePath);
-                CompletableFuture<File> future = attachments.get(0).getProxy().downloadToFile(file);
+                CompletableFuture<File> future = attachments.getFirst().getProxy().downloadToFile(file);
                 future.exceptionally(error -> { // handle possible errors
                     error.printStackTrace();
                     return null;
@@ -124,8 +124,7 @@ public class MessageListener extends ListenerAdapter {
 
         if (timeSinceLast > tenMin) {
             mapreference.setLastTimeGamesChecked(new Date());
-            List<String> storedValues = new ArrayList<>();
-            storedValues.addAll(mapreference.getMessagesThatICheckedForAllReacts().keySet());
+            List<String> storedValues = new ArrayList<>(mapreference.getMessagesThatICheckedForAllReacts().keySet());
             for (String value : storedValues) {
                 if (value.startsWith("gameCreator")) {
                     mapreference.removeStoredValue(value);
@@ -164,7 +163,7 @@ public class MessageListener extends ListenerAdapter {
                                             StringBuilder sb = new StringBuilder();
                                             Player p2 = player;
                                             sb.append(p2.getRepresentationUnfogged());
-                                            sb.append(" You are getting this ping because " + Helper.getSCName(sc, game) + " has been played and now it has been half the alloted time and you haven't reacted. Please do so, or after another half you will be marked as not following.");
+                                            sb.append(" You are getting this ping because ").append(Helper.getSCName(sc, game)).append(" has been played and now it has been half the alloted time and you haven't reacted. Please do so, or after another half you will be marked as not following.");
                                             if (!game.getStoredValue("scPlay" + sc).isEmpty()) {
                                                 sb.append("Message link is: ").append(game.getStoredValue("scPlay" + sc)).append("\n");
                                             }
